# aiogram-bot-template

./: ARCHITECTURE.md  BEGINNER_GUIDE.md  CHEATSHEET.md  FLOW_DIAGRAMS.md  README.md  STEP_BY_STEP_TUTORIAL.md  SUMMARY.md  USAGE_GUIDE.md  pyproject.toml
bowling_bot/: bot.py
bowling_bot/handlers/user/: __init__.py  start.py
bowling_bot/keyboards/default/: consts.py
bowling_bot/keyboards/inline/: consts.py
bowling_bot/keyboards/keyboard_utils/: schema_generator.py
bowling_bot/utils/: logging.py
bowling_bot/web_handlers/: tg_updates.py
