[project]
name = "bowling-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Gadzhimet Mursalov",email = "vne4812@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiogram>=3,<4",
    "environs>=14,<15",
    "redis>=6,<7",
    "asyncpg==0.30.0",
    "pydantic>=2,<3",
    "structlog==25.4.0",
    "aiojobs>=1,<2",
    "orjson>=3.10,<4.0",
    "tenacity>=9,<10",
    "pytz>=2025,<2026",
    "aiohttp>=3.0,<4.0",
    "arrow>=1,<2",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
black = {extras = ["d"], version = "^25"}
ruff = "^0.12"
isort = "~6"
types-pytz = "^2025"
deptry = "0.23.0"
pip-audit = "^2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"
py_version = 313
force_alphabetical_sort_within_sections = true
group_by_package = true
